ietf_yang_DATA = \
$(top_srcdir)/netconf/modules/ietf/ietf-system@2014-08-06.yang \
$(top_srcdir)/netconf/modules/ietf/iana-crypt-hash@2014-08-06.yang \
$(top_srcdir)/netconf/modules/ietf/iana-if-type@2014-05-08.yang \
$(top_srcdir)/netconf/modules/ietf/ietf-interfaces@2014-05-08.yang \
$(top_srcdir)/netconf/modules/ietf/ietf-ip@2014-06-16.yang \
$(top_srcdir)/netconf/modules/ietf/ietf-netconf-monitoring@2010-10-04.yang \
$(top_srcdir)/netconf/modules/ietf/ietf-netconf-with-defaults@2011-06-01.yang \
$(top_srcdir)/netconf/modules/ietf/ietf-netconf-acm@2012-02-22.yang \
$(top_srcdir)/netconf/modules/ietf/ietf-netconf-notifications@2012-02-06.yang \
$(top_srcdir)/netconf/modules/ietf/ietf-yang-library@2016-06-21.yang \
$(top_srcdir)/netconf/modules/ietf/ietf-yang-metadata@2016-08-05.yang \
$(top_srcdir)/netconf/modules/ietf/ietf-yang-types@2013-07-15.yang \
$(top_srcdir)/netconf/modules/ietf/ietf-inet-types@2013-07-15.yang \
$(top_srcdir)/netconf/modules/ietf/ietf-yang-smiv2@2012-06-22.yang \
$(top_srcdir)/netconf/modules/ietf/ietf-ip@2014-06-16.yang \
$(top_srcdir)/netconf/modules/ietf/ietf-ipv4-unicast-routing@2016-11-04.yang \
$(top_srcdir)/netconf/modules/ietf/ietf-ipv6-router-advertisements@2016-11-04.yang \
$(top_srcdir)/netconf/modules/ietf/ietf-ipv6-unicast-routing@2016-11-04.yang \
$(top_srcdir)/netconf/modules/ietf/ietf-routing@2016-11-04.yang

ietf_patched_yang_DATA = \
$(top_srcdir)/netconf/modules/ietf-patched/ietf-netconf@2011-06-01.yang  \
$(top_srcdir)/netconf/modules/ietf-patched/ietf-netconf-partial-lock@2009-10-19.yang

ietf_draft_yang_DATA = \
$(top_srcdir)/netconf/modules/ietf-draft/ietf-network@2017-11-15.yang  \
$(top_srcdir)/netconf/modules/ietf-draft/ietf-network-topology@2017-11-15.yang \
$(top_srcdir)/netconf/modules/ietf-draft/ietf-alarms-x733@2017-10-30.yang \
$(top_srcdir)/netconf/modules/ietf-draft/ietf-alarms@2017-10-30.yang

ietf_derived_yang_DATA = \
$(top_srcdir)/netconf/modules/ietf-derived/nc-notifications.yang \
$(top_srcdir)/netconf/modules/ietf-derived/notifications.yang

ietf_expired_yang_DATA = \
$(top_srcdir)/netconf/modules/ietf-expired/ietf-direct-must-augment-extension@2015-06-12.yang \
$(top_srcdir)/netconf/modules/ietf-expired/ietf-inet-types@2010-09-24.yang \
$(top_srcdir)/netconf/modules/ietf-expired/ietf-yang-types@2010-09-24.yang

netconfcentral_yang_DATA = \
$(top_srcdir)/netconf/modules/netconfcentral/yuma-types.yang \
$(top_srcdir)/netconf/modules/netconfcentral/yuma-xsd.yang \
$(top_srcdir)/netconf/modules/netconfcentral/yuma-ncx.yang \
$(top_srcdir)/netconf/modules/netconfcentral/yuma-time-filter.yang \
$(top_srcdir)/netconf/modules/netconfcentral/yuma-proc.yang \
$(top_srcdir)/netconf/modules/netconfcentral/yuma-app-common.yang \
$(top_srcdir)/netconf/modules/netconfcentral/yuma-mysession.yang \
$(top_srcdir)/netconf/modules/netconfcentral/toaster.yang

yuma123_yang_DATA = \
$(top_srcdir)/netconf/modules/yuma123/netconfd.yang \
$(top_srcdir)/netconf/modules/yuma123/yangcli.yang \
$(top_srcdir)/netconf/modules/yuma123/yangcli-ex.yang \
$(top_srcdir)/netconf/modules/yuma123/netconfd-ex.yang \
$(top_srcdir)/netconf/modules/yuma123/yuma123-netconf.yang \
$(top_srcdir)/netconf/modules/yuma123/yuma123-netconf-types.yang \
$(top_srcdir)/netconf/modules/yuma123/yuma123-system.yang
